# AoC2024

./: .gitignore  main.py  pyproject.toml  ruff.toml
1/: 1.py  2.py
src/: day1.py  day10.py  day11.py  day12.py  day2.py  day3.py  day4.py  day4_directions.py  day4_numpy.py  day5.py  day6.py  day7.py  day8.py  day9.py
src/common/: tasks.tpl  test_tasks.tpl  utils.py
src/day1/: task1.py  task2.py  tasks.py
src/day10/: tasks.py
src/day11/: tasks.py
src/day2/: task1.py  task2.py  tasks.py
src/day3/: tasks.py
src/day4/: tasks.py  tasks_directions.py  tasks_numpy.py
src/day5/: tasks.py
src/day6/: tasks.py
src/day7/: tasks.py
src/day8/: tasks.py
src/day9/: tasks.py
tests/day10/: test.py  test_day10.py
tests/day11/: test_day11.py
tests/day12/: test_day12.py
tests/test_day11/: test_tasks.py
