[project]
name = "aoc2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.1.3",
    "py-spy>=0.4.0",
    "ruff>=0.8.1",
    "specialist>=0.7.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ruff>=0.8.1",
]

