[project]
name = "aoc2024"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "msgspec>=0.19.0",
    "numpy>=2.1.3",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "py-spy>=0.4.0",
    "pytest>=8.3.4",
    "ruff>=0.8.1",
    "specialist>=0.7.0",
    "types-tqdm>=4.67.0.20241221",
]

